# conflib

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  config.guess  config.h.in  configure  configure.in  install-info  ltconfig
doc/: Makefile.am  Makefile.in  cl_alist.texi  cl_clearconf.texi  cl_closeconf.texi  cl_find_var.texi  cl_free_unk.texi  cl_gcstanza.texi  cl_getconf.texi  cl_getstanza.texi  cl_getvers.texi  cl_in_array.texi  cl_in_warray.texi  cl_openconf.texi  cl_putstanza.texi  cl_setvar.texi  cl_unalias.texi  cl_writeconf.texi  conflib.info  conflib.info-1  conflib.info-2  conflib.texi  lgpl.texi  t_simple.c.texi  tinterp.texi
src/: .cvsignore  Makefile.am  Makefile.in  cl_alist.c  cl_assign.c  cl_clearconf.c  cl_closeconf.c  cl_find_var.c  cl_free_unk.c  cl_gcstanza.c  cl_getconf.c  cl_getstanza.c  cl_getvers.c  cl_in_array.c  cl_in_warray.c  cl_lib.c  cl_macro.c  cl_openconf.c  cl_put_one.c  cl_putstanza.c  cl_setvar.c  cl_strtol.c  cl_strtol.h  cl_tinterp.c  cl_unalias.c  cl_warning.c  cl_writeconf.c  conflib.h  intern.h  libtest.c  ownstd.h  strcasecmp.c  strdup.c  strncasecmp.c  strtol.c  tinterp.h  wildmat.c
testsuite/: Makefile.am  Makefile.in  check1-unset.out  check1.cnf  check1.out  check2.cnf  check2.out  check4.cnf  check4.out  conflibtest.c  interpret-set.out  interpret-unset.out  interpret.cnf  stanza-bracket.cnf  stanza-colon.cnf  stanza-colon.out  tmp.cnf
testsuite/config/: unix.exp
testsuite/conflib/: conflib.exp  interp.exp
testsuite/lib/: conflib.exp
